--- a/package.json
+++ b/package.json
@@ -18,19 +18,22 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
-    "popper.js": "^1.16.1"
+    "moment": "^2.29.3",
+    "popper.js": "^1.16.1",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.5",
     "@angular/cli": "~13.3.5",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
